--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@
 				</div>
 				<div class="shangou_lun">
 					<div id="shangou_lun_2" class="shangou_lun_2">
-						<img src="img/waa.png" alt="">
-						<img src="img/wbb.png" alt="">
-						<img src="img/wcc.png" alt="">
-						<img src="img/wdd.png" alt="">
-						<img src="img/wee.png" alt="">
-						<img src="img/wff.png" alt="">
-						<img src="img/wgg.png" alt="">
+						<img src="img/捕获.png" alt="">
+						<img src="img/捕获1.png" alt="">
+						<img src="img/捕获2.png" alt="">
+						<img src="img/捕获3.png" alt="">
+						<img src="img/捕获4.png" alt="">
+						<img src="img/捕获5.png" alt="">
+						<img src="img/捕获6.png" alt="">
 					</div>
 				</div>
 			</div>
